src/test/compile-fail/return-in-block-function.rs
fn main() {
    let _x = || {
        return //~ ERROR: `return` in block function
    };
}
